2011-02-26 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Post-release bump version.

	* NEWS: Pre-release udate.

	* src/core/na-settings.c:
	* src/core/na-settings.h: NA_IPREFS_PLUGIN_MENU_LOG user preference renamed.

	* src/plugin-menu/nautilus-module.c (set_log_handler):
	Test if log are enabled before installing the log handler.

	* src/plugin-menu/nautilus-actions.c:
	* src/plugin-menu/nautilus-actions.h (nautilus_action_is_log_enabled):
	Removed function. Fix #643359.

	* configure.ac: Post-release bump version.

2011-02-25 Pierre Wieser <pwieser@trychlos.org>

	* NEWS:
	* README:
	* README-GCONF: Update before releasing.

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c (na_core_utils_str_subst): New function.

	* src/core/na-settings.c:
	* src/core/na-settings.h:
	Rename "terminal-prefix" user preference as "terminal-pattern".

	* src/core/na-tokens.c:
	* src/core/na-tokens.h (na_tokens_command_from_terminal_prefix):
	Renamed as na_tokens_command_for_terminal().

	* docs/reference/nautilus-actions-sections.txt:
	* src/nact/nact-preferences-editor.c:
	* src/nact/nact-preferences.ui: Updated accordingly.

	* src/nact/nact-iexecution-tab.c (on_main_selection_changed):
	Disable not implemented frames.

	* src/nact/nautilus-actions-config-tool.ui:
	Add a tooltip comment on not yet implemented fields.

	* src/core/na-icontext.c (is_candidate_for_show_in):
	First try desktop from user preferences.

	NASettings is now a private singleton which allocates itself when needed.
	Preference are so available anywhere without requiring an object.

	* src/core/na-importer-ask.c (na_importer_ask_user):
	* src/core/na-importer.c (import_from_uri):
	* src/core/na-io-provider.c (na_io_provider_is_conf_readable):
	* src/core/na-iprefs.c:
	* src/core/na-iprefs.h:
	* src/core/na-pivot.c (instance_constructed, instance_dispose):
	* src/core/na-pivot.h (na_pivot_get_settings):
	* src/core/na-settings.c:
	* src/core/na-settings.h:
	* src/core/na-tokens.c: